// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/users GET / / - retrieve users 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "password": "$2a$10$zjvFA7/afSsBZ1uGnqtKbOJ1qAC0NAGrDahOVLczRwYmuDeTftuKq",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "role": "OWNER",
        "username": "owner@test.com",
      },
    },
  },
  "result": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`/api/users GET / /:userId - retrieve user from id 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "password": "$2a$10$igppEHwlwbWottGdz9v/9OkG2soIFRC8BXfBjQFI7L6anzaRznb4W",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "role": "OWNER",
        "username": "owner@test.com",
      },
    },
  },
  "result": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`/api/users GET / /me - retrieve user from token 1`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "enterprise": Object {
    "createdAt": "2017-07-19T00:14:30.932Z",
    "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
    "name": "Test Enterprise",
    "plan": "GROWTH",
  },
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "role": "MANAGER",
  "user": Object {
    "firstName": "Harvey",
    "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
    "lastName": "Dentest",
    "username": "manager@test.com",
  },
  "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`/api/users PUT /:userId update a user 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "6668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "password": "$2a$10$V6Tn/H.PWk0d42opmRwIw.YxLX6tbZg2.iGM62Fx0847DhObqTR0u",
        "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "username": "manager@test.com",
      },
    },
  },
  "result": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;
